<resources>
    <string name="app_name">Secure My Passwords</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirmPassword">Confirm Password</string>
    <string name="not_implemented">Not implemented yet</string>
    <string name="error">Error ! </string>
    <string name="title">Title</string>

    <!-- Strings related to login -->
    <string name="prompt_email">email</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_email">This email is invalid</string>
    <string name="error_toShort_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="confirm">Confirm</string>
    <string name="welcome_back">Welcome back</string>
    <string name="registerFromLogin">You need a new account?\nclick her</string>

    <!-- Strings related to registration -->
    <string name="register_msg">Enter your information</string>
    <string name="action_register">Register</string>
    <string name="loginFromRegister">Already an account?\nclick her</string>
    <string name="malformedURL">Bad URL</string>
    <string name="connectionError">Connection Error!</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="new_entry">New Entry</string>
    <string name="new_group">New Group</string>

    <string name="enter_password">Please enter the master password</string>

    <!-- Activates -->
    <!-- SetupActivity -->
    <string name="tooSmall_password">tooSmall</string>
    <string name="medium_password">medium</string>
    <string name="strong_password">strong</string>
    <string name="strongest_password">strongest</string>
    <string name="setup_master_password">Welcome\nKeep your password safe with one\nmaster protection\nPlease setup your password</string>


    <!-- PictureDescription -->
    <string name="cadena">cadena</string>

    <!-- appBar -->
    <string name="onlineStorage">Online storage</string>
    <string name="password_generator">Password Generator</string>

    <!-- ManagePassword -->
    <string name="managePasswordURL_hint">URL</string>
    <string name="managePasswordName_hint">Name</string>
    <string name="managePasswordPassword_hint">Password</string>
    <string name="managePasswordNotes_hint">Notes</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <string name="pref_header_display">Display</string>
    <string name="pref_background_color">Background color</string>
    <string name="pref_importantText_color">Important text color</string>
    <string name="pref_secondaryText_color">Secondary text color</string>
    <string name="pref_ui_elements_color">Ui elements color</string>

    <string name="pref_header_serverSync">Server sync</string>

    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="typeOfEntryIllustration">unknown type of entry</string>
    <string name="oldPassword">old Password</string>
    <string name="newPassword">new Password</string>
    <string name="save">Save</string>
    <string name="change_password">Update master key</string>
    <string name="error_titleIsEmpty">The title cannot be empty</string>
    <string name="copiedToClipBoard">Password copied to clipboard!</string>
    <string name="change_master_key_dialog_title">Change master key</string>
    <string name="syncPasswordWithServer">Synchronize passwords with server</string>
    <string name="last_local_update">Last local file update :</string>
    <string name="last_remote_update">Last remote update :</string>
    <string name="pull_remote_passwords">Pull remote passwords</string>
    <string name="push_local_passwords">Push local passwords</string>
    <string name="cancel">Cancel</string>
    <string name="finish">Finish</string>
    <string name="logOut">Log out</string>
    <string name="select_online_account_again">To synchronize your password select Online storage again</string>
    <string name="link_to_url">Link to URL</string>
    <string name="sync_action_tooltip">Select the action that you want to perform:</string>
    <string name="loginWithoutApiKey">Error: The server haven\'t send authKey</string>
    <string name="turnOnNetwork">You need an internet connection to do that</string>
    <string name="internet_permission_error">This feature need internet permissions</string>
    <string name="server_answer_error">Error in server answer please try again later!</string>
    <string name="title_activity_password_download_manager">PasswordDownloadManager</string>
    <string name="tooSmall_password_error">The password is to small</string>
    <string name="password_not_match_error">The two passwords does not match</string>
    <string name="wrongLogin">your login or password is wrong</string>

</resources>
