<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <!-- //TODO add uploadAndDownload features -->
        <item
            android:id="@+id/nav_onlineStorage"
            android:checkable="false"
            android:enabled="true"
            android:icon="@drawable/ic_cloud_black_24dp"
            android:title="@string/onlineStorage" />

        <item
            android:id="@+id/nav_updateMasterKey"
            android:checkable="false"
            android:icon="@drawable/ic_update_black_24dp"
            android:title="@string/change_password" />
        <item
            android:id="@+id/nav_passGenerator"
            android:checkable="false"
            android:enabled="false"
            android:icon="@drawable/ic_shield"
            android:title="@string/password_generator" />

        <!-- //TODO add settings for color customisation and server address modification -->
        <item
            android:id="@+id/nav_settings"
            android:checkable="false"
            android:enabled="false"
            android:icon="@drawable/ic_settings"
            android:title="@string/action_settings" />
    </group>

</menu>
