<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/updateMasterKey"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.securemypasswords.secureMyPasswords.passwordListActivity.PasswordListActivity">

    <EditText
        android:id="@+id/et_oldPassword_updateMasterKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/oldPassword"
        android:inputType="text|textPassword" />

    <TextView
        android:id="@+id/tv_passwordStrength_updateMasterKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" />

    <EditText
        android:id="@+id/et_newPassword_updateMasterKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/newPassword"
        android:inputType="text|textPassword" />

    <EditText
        android:id="@+id/et_confirmNewPassword_updateMasterKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_confirmPassword"
        android:inputType="text|textPassword" />
</LinearLayout>
