<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_updateMasterKey_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.securemypasswords.secureMyPasswords.passwordListActivity.PasswordListActivity">

    <TextView
        android:id="@+id/tv_lastLocalUpdate_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/last_local_update"

        />

    <TextView
        android:id="@+id/tv_lastLocalUpdate_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_constraintStart_toEndOf="@id/tv_lastLocalUpdate_title" />

    <TextView
        android:id="@+id/tv_lastRemoteUpdate_passwordSync_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:text="@string/last_remote_update"
        app:layout_constraintTop_toBottomOf="@id/tv_lastLocalUpdate_title" />

    <TextView
        android:id="@+id/tv_lastRemoteUpdate_passwordSync_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tv_lastRemoteUpdate_passwordSync_title"
        app:layout_constraintTop_toBottomOf="@id/tv_lastLocalUpdate_title" />

    <TextView
        android:id="@+id/tv_syncToolTip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/sync_action_tooltip"
        app:layout_constraintTop_toBottomOf="@id/tv_lastRemoteUpdate_passwordSync_title" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_syncToolTip">

        <RadioButton
            android:id="@+id/rb_pullLocalPasswords_syncServer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_cloud_download"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_cloud_download"
            android:text="@string/pull_remote_passwords" />

        <RadioButton
            android:id="@+id/rb_pushLocalPasswords_syncServer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_cloud_upload"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_cloud_upload"
            android:text="@string/push_local_passwords" />

    </RadioGroup>


</android.support.constraint.ConstraintLayout>
