<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_passwordManage_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.securemypasswords.secureMyPasswords.PasswordManage">

    <ScrollView
        android:id="@+id/sv_passManage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/entry_save"
        android:layout_alignParentTop="true"
        android:fillViewport="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_passManage_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_passManage_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:hint="@string/title"
                    android:inputType="text|textAutoComplete|textAutoCorrect" />
            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:id="@+id/rl_passManage_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/til_passManage_title">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_passManage_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_passManage_url"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:hint="@string/managePasswordURL_hint"
                        android:inputType="textWebEditText|textUri" />
                </android.support.design.widget.TextInputLayout>

                <ImageButton
                    android:id="@+id/bt_passManage_url"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/til_passManage_url"
                    android:layout_alignRight="@+id/til_passManage_url"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/ic_open_in_browser"
                    android:contentDescription="@string/link_to_url" />

            </RelativeLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_passManage_userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/rl_passManage_url">
            <EditText
                android:id="@+id/et_passManage_userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:hint="@string/managePasswordName_hint"
                android:inputType="textPersonName"
                app:layout_constraintTop_toBottomOf="@+id/et_passManage_url" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_passManage_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/til_passManage_userName"
                app:passwordToggleEnabled="true">
                <EditText
                    android:id="@+id/et_passManage_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:focusable="false"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:textColor="@color/primaryTextColor" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_passManage_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/til_passManage_password">

                <EditText
                    android:id="@+id/et_passManage_note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:hint="@string/managePasswordNotes_hint"
                    android:inputType="textMultiLine" />
            </android.support.design.widget.TextInputLayout>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/entry_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/save" />
</RelativeLayout>
